# Cheetah-Software-RL

./: .gitignore  CMakeLists.txt  README.md  readme.txt
CORE_FILE STORE/: Recovering_fail jump.cpp
common/: CMakeLists.txt
common/include/Controllers/: DesiredStateCommand.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h
common/include/Dynamics/: MiniCheetah.h
config/: default-terrain.yaml  mc-mit-ctrl-user-parameters.yaml  mini-cheetah-defaults.yaml
lcm-types/: T265position_t.lcm  file_list.txt  spi_data_t.lcm
lcm-types/cpp/: CMakeLists.txt  T265position_t.hpp  cheetah_visualization_lcmt.hpp  control_parameter_request_lcmt.hpp  control_parameter_respones_lcmt.hpp  ecat_command_t.hpp  ecat_data_t.hpp  gamepad_lcmt.hpp  heightmap_t.hpp  leg_record.cpp  localization_lcmt.hpp  obstacle_visual_t.hpp  qp_controller_data_t.hpp  rc_channels_t.hpp  rpc_data_clean_t.hpp  rpc_data_t.hpp  rpc_inputs_t.hpp  rpc_outputs_t.hpp  rs_pointcloud_t.hpp  sim_command_t.hpp  simulator_lcmt.hpp  spi_command_t.hpp  spi_data_t.hpp  spi_torque_t.hpp  traversability_map_t.hpp  two_contact_stand_data_t.hpp  velocity_visual_t.hpp  vision_data_t.hpp  wbc_test_data_t.hpp
lcm-types/lcmtypes/: T265position_t.java  localization_lcmt.java  spi_data_t.java
lcm-types/python/: T265position_t.py  cheetah_visualization_lcmt.py  control_parameter_request_lcmt.py  control_parameter_respones_lcmt.py  ecat_command_t.py  ecat_data_t.py  gamepad_lcmt.py  heightmap_t.py  leg_control_command_lcmt.py  leg_control_data_lcmt.py  localization_lcmt.py  microstrain_lcmt.py  obstacle_visual_t.py  qp_controller_data_t.py  rc_channels_t.py  rpc_data_clean_t.py  rpc_data_t.py  rpc_inputs_t.py  rpc_outputs_t.py  rs_pointcloud_t.py  sim_command_t.py  simulator_lcmt.py  spi_command_t.py  spi_data_t.py  spi_torque_t.py  state_estimator_lcmt.py  traversability_map_t.py  two_contact_stand_data_t.py  vectornav_lcmt.py  velocity_visual_t.py  vision_data_t.py  wbc_test_data_t.py
resources/: mini_lower_link.dae
robot/include/: HardwareBridge.h  RobotController.h  RobotRunner.h
robot/include/rt/: rt_spi.h
robot/src/: HardwareBridge.cpp  RobotRunner.cpp  SimulationBridge.cpp
scripts/: config_network_lcm.sh  run_mc.sh  send_to_mini_cheetah_local.sh
sim/include/: Colors.h  RobotInterface.h
sim/src/: DrawList.cpp  Graphics3D.cpp  SimControlPanel.cpp  Simulation.cpp
user/: CMakeLists.txt
user/Fun_Controller/: CMakeLists.txt  MIT_Controller.cpp
user/Fun_Controller/Controllers/BackFlip/: BackFlipCtrl.cpp  BackFlipCtrl.hpp  DataReadCtrl.hpp  FrontJumpCtrl.cpp
user/Fun_Controller/Controllers/WBC_Ctrl/TaskSet/: BodyPosTask.cpp  BodyPostureTask.cpp  LinkPosTask.cpp  LocalHeadPosTask.cpp  LocalPosTask.cpp  LocalRollTask.cpp
user/Fun_Controller/Controllers/convexMPC/: SolverMPC.cpp
user/Fun_Controller/FSM_States/: ControlFSM.cpp  FSM_State.h  FSM_State_BackFlip.cpp  FSM_State_BalanceStand.cpp  FSM_State_BalanceStand.h  FSM_State_FrontFlip.h  FSM_State_Locomotion.cpp  FSM_State_StandUp.cpp  FSM_State_Vision.h
user/Ice_Controller/: BackFlipTesting.cpp  BackFlipTesting.hpp  CMakeLists.txt  DataManager.cpp  DataManager.hpp  Recovering.cpp  Recovering.h  SafetyCheckerPro.cpp  SafetyCheckerPro.hpp  TrainingUserParameters.h  Training_Controller.cpp  Training_Controller.hpp  main.cpp
user/MIT_Controller/: CMakeLists.txt
user/Zero_Controller/: CMakeLists (DEBUG).txt  CMakeLists.txt  InverseKinematics.h  Recovering.cpp  Recovering.cpp.611  Recovering.cpp.618  Recovering.cpp.ORI  Recovering.h  Recovering.h.611  Recovering.h.618  SafetyCheckerPro.cpp  Training_Controller.cpp  Training_Controller.hpp  bullet_lcm3.py  cnpy.cpp  left_traj.npy  onnxtest.hpp  tf_utils_lite.hpp
(+42 files in other folders)
